--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.OrdenPapaApplication" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.OrdenPapaApplication" parent="android:Theme.Material.Light.NoActionBar" >
+        <item name="android:statusBarColor">#202020</item>
+    </style>
+
+    <style name="Theme.SplashScreen.MySplash" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">#202020</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_blur</item>
+        <item name="windowSplashScreenAnimationDuration">1000</item>
+        <item name="postSplashScreenTheme">@style/Theme.OrdenPapaApplication</item>
+    </style>
+
 </resources>
